Update footer link

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         &copy; whitep4nth3r.live | ALL RIGHTS RESERVED (whatever that means)
       </p>
       <a
-        href="https://dusty.domains/thanks/whitep4nth3r.live/0"
+        href="https://whitep4nth3r.com/blog/why-ship-silly-side-projects/"
         target="_blank"
         class="footer__link"
       >
